# mrihelper

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  docker-compose-aws.yml  docker-compose-dev.yml  docker-compose-minio.yml  nginx.conf  nginx_proxy.conf  pyproject.toml  requirements.txt
backend/: api.py  s3storage.py  task_store.py  tasks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: mriService.ts
frontend/src/components/: FileUpload.tsx  MriContainer.tsx  VtkVolumeViewer.tsx
frontend/src/types/: api.ts  vtk.d.ts
