[project]
name = "mrimaster"
version = "0.1.1"
description = ""
authors = [
    {name = "Lixian", email = "lixian.philips.wang@gmail.com"}
]
readme = "README.md"
packages = [
    {include = "mrimaster", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
onnxruntime = "^1.21.0"
celery = "^5.5.1"
numpy = "<2.0"
amqp = "^5.3.1"
redis = "^5.2.1"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"
uuid = "^1.30"
aiofiles = "^24.1.0"
scikit-image = "^0.25.2"
python-multipart = "^0.0.20"
sse-starlette = "^2.2.1"
torch = "^2.6.0"
nibabel = "^5.3.2"
vtk = "^9.4.2"
monai = {extras = ["fire"], version = "^1.4.0"}
onnx = "^1.17.0"
boto3 = "^1.37.37"
dotenv = "^0.9.9"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
websockets = "^15.0.1"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
streamlit = ">=1.44.1,<2.0.0"
torchvision = ">=0.21.0,<0.22.0"
matplotlib = ">=3.8.1,<4.0.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
lightning = ">=2.5.1,<3.0.0"
httpx = "^0.28.1"
split-folders = "^0.5.1"
flower = "^2.0.1"
mlflow = "^2.21.3"
scikit-learn = "^1.6.1"





